# Architecture4

./: .gitignore  CMakeLists.txt  makefile  server  server (РєРѕРїРёСЏ).cpp  server.cpp
PaxHeader/: server (РєРѕРїРёСЏ).cpp
client/: client  client (РєРѕРїРёСЏ).cpp  client.cpp  client_runner.py  makefile
client/PaxHeader/: client (РєРѕРїРёСЏ).cpp
connection/: connection.h
socket/: TCPSocket.cpp  TCPSocket.h
tcp_server/: asioTcpServer.h
tests/: packing.cpp  sockets.cpp  test_suit.cpp
thread/: myThread.cpp  myThread.h
